<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
        <TextView
            android:id="@+id/tvwelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/create_user"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvwelcome"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newUserName"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/newPasswordRepeat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPassword"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password_repeat"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/newPasswordRepeat"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/exit" >
        </Button>

        <Button
            android:id="@+id/btncreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newPasswordRepeat"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/btnexit"
            android:text="@string/create_user" >
        </Button>

</RelativeLayout>